# AudioLinker

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build.yml
assets/: AudioLinker.manifest  AudioLinker.rc  options.html  ui.html
include/: AudioEngine.h  Calibrator.h  DeviceManager.h  Eq.h  Gui.h  Log.h  PolicyConfig.h  Resampler.h  RingBuffer.h  resource.h
src/: AudioEngine.cpp  Calibrator.cpp  DeviceManager.cpp  Gui.cpp  Log.cpp  main.cpp
